@@ -17,6 +17,16 @@ __END__
 
 Data::HTML::Element - Data objects for HTML elements.
 
+=head1 DESCRIPTION
+
+Collection of immutable data objects for HTML elements. All methods should be related to
+main element with exception with inner content defined via 'data' method.
+
+Intent behind data objects is control of information inside it.
+
+This data objects are used in L<Tags::HTML::Element> helpers and in other high
+level objects in L<Tags::HTML> namespace.
+
 =head1 SEE ALSO
 
 =over
